docs/2.3/index.rst
Scylla Monitoring 2.3
=====================

.. toctree::
   :hidden:

   Scylla Monitoring Stack <monitoring_stack>
   Scylla Monitoring Interfaces <monitoring_apis>
   Deploy Scylla Monitoring Without Docker <monitor_without_docker.2.1>
   Troubleshoot Monitoring <monitor_troubleshoot>
   Troubleshoot Integration with Scylla Manager </troubleshooting/manager_monitoring_integration/>
   Upgrade Monitoring </upgrade/upgrade-monitor/index>
   CQL Optimization Dashboard <cql_optimization>
   Adding and Modifying Dashboards <updating_dashboard>

.. raw:: html


   <div class="panel callout radius animated">
            <div class="row">
              <div class="medium-3 columns">
                <h5 id="getting-started">Monitoring Scylla</h5>
              </div>
              <div class="medium-9 columns">

* :doc:`Scylla Monitoring Stack <monitoring_stack>`

* :doc:`Scylla Monitoring Interfaces<monitoring_apis>`

* `Deploy Scylla Monitoring Without Docker <monitor_without_docker.2.1>`_

* :doc:`Troubleshoot Monitoring<monitor_troubleshoot>`

* :doc:`Troubleshooting guide for Scylla Manager and Scylla Monitoring integration </troubleshooting/manager_monitoring_integration/>`

* :doc:`Upgrade Guide - Monitoring </upgrade/upgrade-monitor/index>`

* Scylla Monitoring :download:`Cheatsheet </operating-scylla/monitoring/2.3/Scylla_Monitoring_CheatSheet.pdf>`

* :doc:`CQL Optimization Dashboard <cql_optimization>`

* :doc:`Adding and Modifying Dashboards <updating_dashboard>`

.. raw:: html

   </div>
   </div>
   </div>
