docs/3.2/index.rst
Scylla Monitoring 3.2
=====================

.. toctree::
   :hidden:

   Install Scylla Monitoring Stack <monitoring_stack>
   The start-all.sh script <start_all>
   Scylla Monitoring Interfaces <monitoring_apis>
   Deploy Scylla Monitoring Without Docker <monitor_without_docker>
   Troubleshoot Monitoring <monitor_troubleshoot>
   Troubleshoot Integration with Scylla Manager </troubleshooting/manager_monitoring_integration/>
   Upgrade Monitoring </upgrade/upgrade-monitor/index>
   CQL Optimization Dashboard <cql_optimization>
   Adding and Modifying Dashboards <updating_dashboard>
   Alerting <alerting>

.. include:: /operating-scylla/monitoring/_common/monitor-description.rst

.. panel-box::
  :title: Monitoring Scylla
  :id: "monitoring"
  :class: my-panel

  * :doc:`Install Scylla Monitoring Stack <monitoring_stack>`
  * :doc:`The start-all.sh script <start_all>`
  * :doc:`Scylla Monitoring Interfaces<monitoring_apis>`
  * `Deploy Scylla Monitoring Without Docker <monitor_without_docker>`_
  * :doc:`Troubleshoot Monitoring<monitor_troubleshoot>`
  * :doc:`Troubleshooting guide for Scylla Manager and Scylla Monitoring integration </troubleshooting/manager_monitoring_integration/>`
  * :doc:`Upgrade Guide - Monitoring </upgrade/upgrade-monitor/index>`
  * :doc:`CQL Optimization Dashboard <cql_optimization>`
  * :doc:`Adding and Modifying Dashboards <updating_dashboard>`
  * :doc:`Alerting <alerting>`
